fix alignment and width

--- a/baseline/client/css/jspsych-survey-likert-patch.css
+++ b/baseline/client/css/jspsych-survey-likert-patch.css
@@ -1,5 +1,5 @@
 .jspsych-survey-likert-statement { display:block; font-size: 16px; padding-top: 40px; margin-bottom:10px; }
-.jspsych-survey-likert-options { list-style:none; width:100%; margin:auto; padding:0 0 35px; display:block; font-size: 14px; line-height:1.1em; }
+.jspsych-survey-likert-options { list-style:none; margin:auto; padding:0 0 35px; display:inline-block; font-size: 14px; line-height:1.1em; text-align:left; }
 .jspsych-survey-likert-opt-label { line-height: 1.1em; color: #444; }
 .jspsych-survey-likert-options:before { content: ''; position:relative; top:-11px; /*left:9.5%;*/ display:block; background-color:#efefef; height:4px; width:100%; }
 .jspsych-survey-likert-options:last-of-type { border-bottom: 0; }
